move the corridor servoing code and create the corridor navigation planner

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,4 @@
 rock_library(corridor_navigation
-    SOURCES dummy.cpp)
-
-rock_executable(corridor_navigation_bin main.cpp
-    DEPS corridor_navigation)
+    SOURCES VFHServoing.cpp VFHFollowing.cpp
+    DEPS_PKGCONFIG vfh_star corridor_planner)
 
