integrated VFH-based corridor following + servoing in a library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 rock_library(corridor_navigation
     SOURCES VFHServoing.cpp VFHFollowing.cpp
-    DEPS_PKGCONFIG vfh_star corridor_planner)
+    DEPS_PKGCONFIG vfh_star corridor_planner
+    HEADERS VFHServoing.hpp VFHFollowing.hpp Types.hpp)
 
