--- a/src/corridor_navigation.pc.in
+++ b/src/corridor_navigation.pc.in
@@ -7,6 +7,6 @@ Name: @TARGET_NAME@
 Description: @PROJECT_DESCRIPTION@
 Version: @PROJECT_VERSION@
 Depends: @DEPS_PKGCONFIG@
-Libs: -L${libdir} -l@TARGET_NAME@ -lboost_system
+Libs: -L${libdir} -l@TARGET_NAME@
 Cflags: -I${includedir}
 
