tests cannot be named 'test', use 'test_suite' instead

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,2 +1,2 @@
-rock_testsuite(test geometry_test.cpp DEPS corridor_navigation)
+rock_testsuite(test_suite geometry_test.cpp DEPS corridor_navigation)
 
