Added toy testcase for VFHServoing

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,2 +1,6 @@
+rock_executable(corridir_servoing_test CorridorServoingTest.cpp
+    DEPS corridor_navigation
+    DEPS_PKGCONFIG vfh_star-viz vizkit3d vizkit3d-viz envire-viz)
+
 rock_testsuite(test_suite geometry_test.cpp DEPS corridor_navigation)
 
