--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 rock_library(corridor_navigation
-    SOURCES VFHServoing.cpp VFHFollowing.cpp
-    DEPS_PKGCONFIG vfh_star corridor_planner
-    HEADERS VFHServoingConf.hpp VFHServoing.hpp VFHFollowingConf.hpp VFHFollowing.hpp)
+    SOURCES VFHServoing.cpp
+    DEPS_PKGCONFIG vfh_star
+    HEADERS VFHServoingConf.hpp VFHServoing.hpp)
 
